Moved all graphs into special directory. Answered the last question.

--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,9 @@
 *.log
 /abstangent_x-inc.pdf
 /tangent_x-inc.pdf
+/images/abstangent_x-inc.pdf
+/images/abstangent_x.aux
+/images/nolimit-inc.pdf
+/images/nolimit.aux
+/images/tangent_x-inc.pdf
+/images/tangent_x.aux
